# desktop-app

./: .gitignore  AGENT.MD  AGENTS.md  DESKTOP_APP_PLAN.md  IMPLEMENTATION_BACKLOG.md  TESTING.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.githooks/: pre-push
.github/: BRANCH_PROTECTION.md  CODEOWNERS
.github/workflows/: ci.yml
e2e/: critical-path.spec.ts  localhost.integration.spec.ts
scripts/: apply_branch_protection.sh
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: AuthPanel.tsx  ChatPanel.tsx  FileSyncPanel.tsx  ProfileManager.tsx  ThreadWorkspacePanel.tsx
src/hooks/: useChat.test.tsx  useChat.ts  useFileSync.test.tsx  useFileSync.ts  useProfiles.test.tsx  useProfiles.ts  useThreadWorkspace.test.tsx  useThreadWorkspace.ts
src/lib/: storage.test.ts  storage.ts  tauri.test.ts  tauri.ts
