[package]
name = "ken-desktop"
version = "0.1.0"
description = "Ken desktop app"
authors = ["Ken Team"]
license = "MIT"
edition = "2021"

[lib]
name = "ken_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
keyring = "2.3.3"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }

